# docker_test

./: .dockerignore  .env.example  .gitignore  Dockerfile  Readme.md  app.py  main.py  pyproject.toml  source.sh
resources/: model.py  projects.py
scripts/: build.sh  exec.sh  rm.sh  run.sh
