[tool.poetry]
name = "poetry_test"
version = "0.1.0"
description = ""
authors = ["winverse <public.winverse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gensim = "4.2.0"
pandas = "1.4.2"
konlpy = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
