[tool.poetry]
name = "poetry_test"
version = "0.1.0"
description = ""
authors = ["winverse <public.winverse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.4.2"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
